fix z-index, header position:fixed, fix reponsive header

--- a/assets/css/main-contain.css
+++ b/assets/css/main-contain.css
@@ -1,4 +1,6 @@
-    .contain {}
+    .contain {
+        margin-top: 124px;
+    }
     
     .contain_product-list {}
     
